@@ -59,6 +59,7 @@
 		
 		<form id="userForm">
 			<input class="{required:true}" name="username" id="username" />
+			<input type="submit" name="submitButton" value="submitButtonValue" />
 		</form>
 		
 		<form method="post" id="signupForm" action="../demo/form.php">
